--- a/src/utilities/clear-floats.css
+++ b/src/utilities/clear-floats.css
@@ -9,3 +9,13 @@
 .clear-both {
   clear: both;
 }
+
+.clearfix:before,
+.clearfix:after {
+    content: "";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
